--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,33 @@
-.image
+html
+{
+    scroll-behavior: smooth;
+}
+.hero
 {
     position: relative;
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+}
+.hero::after
+{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: black;
+    opacity: 0.75;
+    display: block;
+}
+.image
+{
+    position: relative;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
     align-items: flex-start;
 }
 .image::after
@@ -15,6 +39,60 @@
     min-width: 100%;
     min-height: 100%;
     background-color: black;
-    opacity: 0.43;
+    opacity: 0.65;
     display: block;
+}
+.caro-image
+{
+    min-width: 100%;
+    min-height: 100%;
+}
+.mobileview
+{
+    position: absolute;
+    top: -50vh;
+    transition: 1s;
+}
+.mobileview.active
+{
+    transition: 1s;
+    top: 0;
+}
+.image-inset
+{
+    position: relative;
+}
+.image-inset::after
+{
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: rgb(68,2,53);
+    background: linear-gradient(90deg, rgba(68,2,53,1), rgba(0,212,255,0) 100%);
+    width: 100%;
+    height: 100%;
+}
+.image-inset>img
+{
+    width: 460px;
+    height: 310px;
+}
+@media only screen and (max-width: 600px) {
+    .image-inset::after
+    {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: rgb(68,2,53);
+        background: linear-gradient(0deg, rgba(68,2,53,1), rgba(0,212,255,0) 100%);
+        width: 100%;
+        height: 100%;
+    }
+    .image-inset>img
+    {
+        width: 100%;
+        height: 100%;
+    }
 }
