--- a/core/templates/applications/bitwisebattle.html
+++ b/core/templates/applications/bitwisebattle.html
@@ -53,7 +53,7 @@
 
 
                                 <div class="sm:col-span-3 mt-4">
-                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Participant 1</label>
+                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Name of Participant 1</label>
                                     <div class="mt-2 min-w-full">
                                       <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
                                         <input required type="text" maxlength="100" name="p1" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
@@ -71,7 +71,7 @@
                                 </div>
 
                                 <div class="sm:col-span-3 mt-4">
-                                  <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Participant 2</label>
+                                  <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Name of Participant 2</label>
                                   <div class="mt-2 min-w-full">
                                     <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
                                       <input required type="text" maxlength="100" name="p2" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
@@ -92,7 +92,7 @@
                                     <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Mobile Number</label>
                                     <div class="mt-2 min-w-full">
                                       <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                        <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="contact min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                       </div>
                                     </div>
                                 </div>
