--- a/core/templates/applications/challengeshowcase.html
+++ b/core/templates/applications/challengeshowcase.html
@@ -35,48 +35,95 @@
                 <p class="font-bold text-2xl text-black underline">REGISTER</p>
                 <p class="errortext font-medium text-sm text-red-600"></p>
                 <form class="bg-white form" method="POST">
-                    {% csrf_token %}
-                    <div class="space-y-12">
-                      <div>
-                        <div class="mt-4  gap-x-6 gap-y-8 sm:grid-cols-6">
-                          <div class="text-sm leading-6">
-                            <p class="text-red-600 font-semibold text-sm">{{errorhelp}}</p>
-                          </div>
-                                <div class="sm:col-span-3 mt-4">
-                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Fullname</label>
-                                    <div class="mt-2 min-w-full">
-                                      <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <input required type="text" maxlength="100" name="name" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
-                                      </div>
-                                    </div>
-                                </div>
-
-                                <div class="sm:col-span-3 mt-4">
-                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
-                                    <div class="mt-2 min-w-full">
-                                      <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <input required type="email" name="mail" id="title" class="email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
-                                      </div>
-                                    </div>
-                                </div>
-
-                                <div class="sm:col-span-3 mt-4">
-                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Mobile Number</label>
-                                    <div class="mt-2 min-w-full">
-                                      <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
-                                      </div>
-                                    </div>
-                                </div>
+                  {% csrf_token %}
+                  <div class="space-y-12">
+                    <div>
+                      <div class="mt-4  gap-x-6 gap-y-8 sm:grid-cols-6">
+                        <div class="text-sm leading-6">
+                          <p class="text-red-600 font-semibold text-sm">{{errorhelp}}</p>
                         </div>
-                      </div>
+                              <div class="sm:col-span-3 mt-4">
+                                <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Team Name</label>
+                                <div class="mt-2 min-w-full">
+                                  <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                    <input required type="text" maxlength="100" name="teamname" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                  </div>
+                                </div>
+                              </div>
 
-                      </div>
-                      <div class="flex mt-6 items-center justify-start gap-x-6 ">
-                        <button type="submit" name="submissiontype" value="redirect" class="submitbtn w-full lg:w-auto rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
+
+                              <div class="sm:col-span-3 mt-4">
+                                  <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Name of Participant 1</label>
+                                  <div class="mt-2 min-w-full">
+                                    <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                      <input required type="text" maxlength="100" name="p1" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                    </div>
+                                  </div>
+                              </div>
+
+                              <div class="sm:col-span-3 mt-4">
+                                  <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
+                                  <div class="mt-2 min-w-full">
+                                    <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                      <input required type="email" name="e1" id="title" class="email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                    </div>
+                                  </div>
+                              </div>
+
+                              <div class="sm:col-span-3 mt-4">
+                                <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Name of Participant 2(Optional)</label>
+                                <div class="mt-2 min-w-full">
+                                  <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                    <input type="text" maxlength="100" name="p2" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                  </div>
+                                </div>
+                              </div>
+
+                            <div class="sm:col-span-3 mt-4">
+                                <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail</label>
+                                <div class="mt-2 min-w-full">
+                                  <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                    <input type="email" name="e2" id="title" class="email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                  </div>
+                                </div>
+                            </div>
+
+                            <div class="sm:col-span-3 mt-4">
+                              <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Name of Participant 3 (Optional)</label>
+                              <div class="mt-2 min-w-full">
+                                <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                  <input type="text" maxlength="100" name="p3" id="title" value="{{title}}" class="min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                </div>
+                              </div>
+                            </div>
+
+                          <div class="sm:col-span-3 mt-4">
+                              <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail</label>
+                              <div class="mt-2 min-w-full">
+                                <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                  <input type="email" name="e3" id="title" class="email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                </div>
+                              </div>
+                          </div>
+
+                              <div class="sm:col-span-3 mt-4">
+                                  <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Mobile Number</label>
+                                  <div class="mt-2 min-w-full">
+                                    <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                      <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="contact min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                    </div>
+                                  </div>
+                              </div>
                       </div>
                     </div>
-                  </form>
+
+                    </div>
+                    <div class="mt-6">
+                      <p class="errorhelp text-sm font-medium text-red-500"></p>
+                      <button type="submit" name="submissiontype" value="redirect" class=" mt-4 submitbtn w-full lg:w-auto  rounded-md bg-indigo-600 px-6 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
+                    </div>
+                  </div>
+                </form>
                   
             </div>
 
