--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -41,21 +41,21 @@
         </div>
         <!-- Item 2 -->
            <div class="hidden duration-700 ease-in-out image" id="carousel-item-2" data-carousel-item >
-            <img src="{% static 'images/c2.jpg' %}" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 caro-image" alt="...">
-            <div class="z-[100] flex flex-col lg:mt-24 image-content px-6 lg:px-12 mt-auto mb-auto">
-                <p class="font-extralight text-white opacity-70  tracking-widest leading-none">EVENT HIGHLIGHTS</p>
-                <p class="font-medium text-2xl text-white underline">Founder's Fest</p>
-                <p class="font-medium text-4xl  text-white mt-2">Unleash your Enterpreneurial Spirit</p>
-                <p class="font-extralight text-gray-300 lg:max-w-[80%] mt-4">
-                    Present your groundbreaking business idea to a panel of industry experts, obtain their validation, and refine the concept for improvement.
-                </p>
-                 <a href="/founder'sfest/" class="mt-6">
-                <button type="button" class=" flex gap-2 items-center justify-between text-white bg-[#4f46e5] hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-normal rounded-md text-lg px-12 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-                    Enroll Now
-                </button>
-            </a>
+                <img src="{% static 'images/c2.jpg' %}" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 caro-image" alt="...">
+                <div class="z-[100] flex flex-col lg:mt-24 image-content px-6 lg:px-12 mt-auto mb-auto">
+                    <p class="font-extralight text-white opacity-70  tracking-widest leading-none">EVENT HIGHLIGHTS</p>
+                    <p class="font-medium text-2xl text-white underline">Founder's Fest</p>
+                    <p class="font-medium text-4xl  text-white mt-2">Unleash your Enterpreneurial Spirit</p>
+                    <p class="font-extralight text-gray-300 lg:max-w-[80%] mt-4">
+                        Present your groundbreaking business idea to a panel of industry experts, obtain their validation, and refine the concept for improvement.
+                    </p>
+                    <a href="/founder'sfest/" class="mt-6">
+                    <button type="button" class=" flex gap-2 items-center justify-between text-white bg-[#4f46e5] hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-normal rounded-md text-lg px-12 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
+                        Enroll Now
+                    </button>
+                </a>
+                </div>
             </div>
-        </div>
         <!-- Item 3 -->
         <div class="hidden duration-700 ease-in-out image" id="carousel-item-3" data-carousel-item >
             <img src="{% static 'images/c3.jpg' %}" class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 caro-image" alt="...">
@@ -170,7 +170,7 @@
 <!-- Events -->
 
     <div class="mt-32">
-        <p class="font-montserrat font-bold text-4xl text-center lg:text-left">EVENTS</p>
+        <p class="font-montserrat font-bold text-4xl text-center lg:text-left">COMMON EVENTS</p>
     </div>
     <!-- Event Cards -->
     <div>
@@ -217,7 +217,7 @@
 <div class="p-6 lg:px-12">
     <div class="mt-12">
         <p class="font-montserrat font-bold text-4xl text-center lg:text-left">EVENT COORDINATORS</p>
-        <p class="text-gray-500">Need help registering? Contact our event Coordinators </p>
+        <p class="text-gray-500  text-center">Need help registering? Contact our event Coordinators </p>
     </div>
     <div class="flex justify-evenly gap-4 lg:flex-nowrap flex-wrap">
         <div class="pb-4 flex flex-col justify-evenly max-w-[400px] backdrop-blur-md bg-white bg-opacity-25 border border-gray-300 rounded-lg mt-12 overflow-hidden shadow-lg">
