--- a/core/templates/applications/blueprintbash.html
+++ b/core/templates/applications/blueprintbash.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Fusion Meet Registration</title>
+    <title>Blueprint Bash Registration</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
@@ -65,7 +65,7 @@
                                   <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
                                   <div class="mt-2 min-w-full">
                                     <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                      <input required type="email" name="e1" id="title" class="email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                      <input required type="email" name="e1" id="title" class="m1 email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                     </div>
                                   </div>
                               </div>
@@ -110,6 +110,7 @@
                                   <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Mobile Number</label>
                                   <div class="mt-2 min-w-full">
                                     <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
+                                      <p class="errorhelp text-sm font-medium text-red-500"></p>
                                       <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="contact min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                     </div>
                                   </div>
