--- a/core/templates/core/nav2.html
+++ b/core/templates/core/nav2.html
@@ -9,8 +9,8 @@
     </a>
     <div class="hidden lg:flex gap-12 desk-elements">
         <a href="/" class="text-black">Home</a>
-        <a href="" class="text-black">Events</a>
-        <a href="" class="text-black">Register</a>
+        <a href="#Event" class="text-black">Events</a>
+        <a href="#Contact" class="text-black">Contact</a>
     </div>
     <div class="absolute top-8 lg:hidden right-6 flex gap-2 flex-col cursor-pointer navbutton">
         <div class="h-[1px] w-9 rounded-md bg-black"></div>
@@ -32,8 +32,8 @@
         </div>
         <div class="flex flex-col gap-6 mt-12">
             <a href="/" class="hover:underline border-b">Home</a>
-            <a href="" class="hover:underline border-b">Events</a>
-            <a href="" class="hover:underline  border-b ">Register</a>
+            <a href="/" class="hover:underline border-b">Events</a>
+            <a href="/" class="hover:underline  border-b ">Contact</a>
         </div>
      </div>
 </nav>
