--- a/core/templates/applications/bitwisebattle.html
+++ b/core/templates/applications/bitwisebattle.html
@@ -92,7 +92,6 @@
                                     <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Mobile Number</label>
                                     <div class="mt-2 min-w-full">
                                       <div class="min-w-full flex-col flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <p class="errorhelp text-sm font-medium text-red-500"></p>
                                         <input required type="number" maxlength="100" name="contact" id="title" value="{{title}}" class="contact min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                       </div>
                                     </div>
@@ -101,8 +100,9 @@
                       </div>
 
                       </div>
-                      <div class="flex mt-6 items-center justify-start gap-x-6 ">
-                        <button type="submit" name="submissiontype" value="redirect" class="submitbtn w-full lg:w-auto rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
+                      <div class="mt-6">
+                        <p class="errorhelp text-sm font-medium text-red-500"></p>
+                        <button type="submit" name="submissiontype" value="redirect" class=" mt-4 submitbtn w-full lg:w-auto  rounded-md bg-indigo-600 px-6 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
                       </div>
                     </div>
                   </form>
