--- a/core/templates/applications/webfusionmeet.html
+++ b/core/templates/applications/webfusionmeet.html
@@ -73,7 +73,7 @@
 
                       </div>
                       <div class="flex mt-6 flex-col items-start gap-x-6 ">
-                        <p class="errorhelp text-sm font-medium text-red-500"></p>
+                        <p class="errorhelp text-sm font-medium text-red-500">{{error}}</p>
                         <button type="submit" name="submissiontype" value="redirect" class="submitbtn mt-4 w-full lg:w-auto rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Register</button>
                       </div>
                     </div>
