--- a/core/templates/core/nav.html
+++ b/core/templates/core/nav.html
@@ -7,16 +7,13 @@
 
     <div class="hidden lg:flex gap-6 desk-elements">
         <a href="/" class="text-black">Home</a>
-        <a href="" class="text-black">Events</a>
-        <a href="" class="text-black">Register</a>
-    </div>
-    <div class="flex items-center gap-2">
-        <img src="{% static 'images/srclogo.svg' %}" alt="logo" class="w-16">
+        <a href="#Event" class="text-black">Events</a>
+        <a href="#Contact" class="text-black">Contact</a>
     </div>
     <div class="absolute top-8 lg:hidden right-6 flex gap-2 flex-col cursor-pointer navbutton">
-        <div class="h-[1px] w-9 rounded-md bg-white"></div>
-        <div class="h-[1px] w-9 rounded-md bg-white"></div>
-        <div class="h-[1px] w-9 rounded-md bg-white"></div>
+        <div class="h-[1px] w-9 rounded-md bg-black"></div>
+        <div class="h-[1px] w-9 rounded-md bg-black"></div>
+        <div class="h-[1px] w-9 rounded-md bg-black"></div>
     </div>
 
     <!-- Mobile div -->
@@ -33,8 +30,8 @@
         </div>
         <div class="flex flex-col gap-6 mt-12">
             <a href="/" class="hover:underline border-b">Home</a>
-            <a href="" class="hover:underline border-b">Events</a>
-            <a href="" class="hover:underline  border-b ">Register</a>
+            <a href="#Event" class="hover:underline border-b">Events</a>
+            <a href="#Contact" class="hover:underline  border-b ">Contact</a>
         </div>
      </div>
 </nav>
