--- a/core/templates/applications/boardbonanza.html
+++ b/core/templates/applications/boardbonanza.html
@@ -55,7 +55,7 @@
                                   <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
                                   <div class="mt-2 min-w-full">
                                     <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                      <input required type="email" name="e1" id="title" class="m1 email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                      <input required type="email" name="e1" id="title" oninput="this.value = this.value.toLowerCase()" class="m1 email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                     </div>
                                   </div>
                               </div>
