--- a/core/templates/applications/webfusionmeet.html
+++ b/core/templates/applications/webfusionmeet.html
@@ -52,10 +52,10 @@
                                 </div>
 
                                 <div class="sm:col-span-3 mt-4">
-                                    <label for="title" class="block text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
+                                    <label for="title" class="block lowercase text-sm font-medium leading-6 text-gray-900">College Mail (eg: 727623BAD***@mcet.in)</label>
                                     <div class="mt-2 min-w-full">
                                       <div class="min-w-full flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 sm:max-w-md">
-                                        <input required type="email" name="mail" id="title" class="m1 email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
+                                        <input required type="email" oninput="this.value = this.value.toLowerCase()" name="mail" id="title" class="m1 email min-w-full block border-0 bg-transparent py-1.5 pl-4 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" >
                                       </div>
                                     </div>
                                 </div>
